--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,19 +8,28 @@ dependencies {
     implementation 'org.testng:testng:7.5'
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
     implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'commons-net:commons-net:3.8.0'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
+    implementation 'org.hibernate:hibernate-core-jakarta:5.6.3.Final'
+    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 
-test{
+test {
     useTestNG{
-        suites 'src/test/resources/testng-group.xml'
+        //suites 'src/test/resources/testng.xml'
     }
-    if (project.hasProperty('browser')){
+    if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
     }
-    if (project.hasProperty('target')){
+
+    if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
     }
-    if (project.hasProperty('virifyUI')){
-        systemProperty 'virifyUI', "${virifyUI}"
+
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"
     }
+
 }
