--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -12,13 +12,12 @@ dependencies {
     implementation 'commons-net:commons-net:3.8.0'
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
-    implementation 'org.hibernate:hibernate-core-jakarta:5.6.3.Final'
-    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha14'
 }
 
 test {
     useTestNG{
-        //suites 'src/test/resources/testng.xml'
+        suites 'src/test/resources/testng.xml'
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
